# LoxCpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
LoxGoogleTest/src/: CheckerTest.cpp  ChunkRwTest.cpp  CompilerTest.cpp  OptimizerTest.cpp  ScannerTest.cpp  ValueTest.cpp  VmTest.cpp
LoxInterpreter/src/: ErrorCode.hpp  Natives.cpp  Natives.hpp  main.cpp
LoxLib/include/Lox/: Configuration.hpp  Lox.hpp
LoxLib/include/Lox/Compiler/: Compiler.hpp  CompilerErrorReporter.hpp  SourcePosition.hpp
LoxLib/include/Lox/DataStructures/: Chunk.hpp  LinesArray.hpp
LoxLib/include/Lox/Interpreter/: CallFrame.hpp  Opcode.hpp  OpcodeType.hpp  StackIterator.hpp  VirtualMachine.hpp  VirtualMachineConfiguration.hpp
LoxLib/include/Lox/Interpreter/Exceptions/: All.hpp  InvalidStackAccess.hpp  NonCallable.hpp  RuntimeException.hpp  StackOverflow.hpp  StackUnderflow.hpp  UndefinedProperty.hpp  UndefinedVariable.hpp  UnknownInstruction.hpp  WrongArgumentsCount.hpp  WrongType.hpp  ZeroDivision.hpp
LoxLib/include/Lox/Runtime/: GcPtr.hpp  MemoryManager.hpp  Nil.hpp  Object.hpp  ObjectType.hpp  PrintFlags.hpp  RootsSource.hpp  Value.hpp  ValueType.hpp
LoxLib/include/Lox/Runtime/Objects/: BoundMethod.hpp  Class.hpp  Closure.hpp  Instance.hpp  Native.hpp  String.hpp  Upvalue.hpp
LoxLib/include/Lox/Stages/: ChunkChecker.hpp  ChunkOptimizer.hpp
LoxLib/include/Lox/Stages/Exceptions/: OptimizerFailure.hpp
LoxLib/include/Lox/Util/: Assert.hpp  ChunkDumper.hpp  ChunkReader.hpp  ChunkSerialization.hpp  ChunkWriter.hpp  OptionalReference.hpp  OverloadedVisitor.hpp  StackedBoolean.hpp
LoxLib/src/Lox/Compiler/: Compiler.cpp
LoxLib/src/Lox/Compiler/Compilers/: ClassCompiler.cpp  ClassCompiler.hpp  Compiler.cpp  Compiler.hpp  FunctionType.hpp  ScopedValueChange.hpp
LoxLib/src/Lox/Compiler/Parsing/: Parser.cpp  Parser.hpp  ParserRule.cpp  ParserRule.hpp  Precedence.hpp
LoxLib/src/Lox/Compiler/Scanning/: Scanner.cpp  Scanner.hpp  SourcePosition.cpp  Token.cpp  Token.hpp  TokenType.cpp  TokenType.hpp
LoxLib/src/Lox/DataStructures/: Chunk.cpp  LinesArray.cpp
LoxLib/src/Lox/Interpreter/: CallFrame.cpp  Opcode.cpp  VirtualMachine.cpp  VirtualMachineConfiguration.cpp
LoxLib/src/Lox/Interpreter/Exceptions/: InvalidStackAccess.cpp  NonCallable.cpp  RuntimeException.cpp  StackOverflow.cpp  StackUnderflow.cpp  UndefinedProperty.cpp  UndefinedVariable.cpp  UnknownInstruction.cpp  WrongArgumentsCount.cpp  ZeroDivision.cpp
LoxLib/src/Lox/Runtime/: MemoryManager.cpp  Nil.cpp  Object.cpp  ObjectType.cpp  Value.cpp  ValueType.cpp
LoxLib/src/Lox/Runtime/Objects/: BoundMethod.cpp  Class.cpp  Closure.cpp  Instance.cpp  Native.cpp  String.cpp  Upvalue.cpp
LoxLib/src/Lox/Stages/: ChunkChecker.cpp  ChunkOptimizer.cpp
LoxLib/src/Lox/Stages/Exceptions/: OptimizerFailure.cpp
LoxLib/src/Lox/Util/: Assert.cpp  ChunkDumper.cpp  ChunkReader.cpp  ChunkWriter.cpp  StackedBoolean.cpp
